--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.111) unstable; urgency=low
+
+  * Add options when copying a directory to another directory
+
+ -- John Southworth <john.southworth@vyatta.com>  Mon, 25 Apr 2011 18:55:04 -0500
+
 vyatta-op (0.13.110) unstable; urgency=low
 
   * Support saving to and from URLs in image tools
