--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.113) unstable; urgency=low
+
+  * rename 'files' to 'file' in templates for image-tools
+
+ -- John Southworth <john.southworth@vyatta.com>  Thu, 28 Apr 2011 16:40:28 -0500
+
 vyatta-op (0.13.112) unstable; urgency=low
 
   * verify the users intention when deleting directories since we don't
