--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-op (0.13.114) unstable; urgency=low
+
+  * Fix accidental merge of show interfaces script, reverting to
+    previous behavior
+
+ -- John Southworth <john.southworth@vyatta.com>  Thu, 28 Apr 2011 17:32:48 -0500
+
 vyatta-op (0.13.113) unstable; urgency=low
 
   * rename 'files' to 'file' in templates for image-tools
