--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-op (0.13.120) unstable; urgency=low
+
+  * allow "clear connection-tracking" op mode command to override query
+    for rest mode.
+
+ -- Michael Larson <mike@vyatta.com>  Wed, 04 May 2011 16:10:11 -0700
+
 vyatta-op (0.13.119) unstable; urgency=low
 
   * allow "reboot at" and "reboot" to be invoked by the rest api.
