--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-op (0.13.123) unstable; urgency=low
+
+  * Bugfix 7059 These commands weren't specified in the bug but they
+    needed the same check
+
+ -- John Southworth <john.southworth@vyatta.com>  Fri, 06 May 2011 13:34:06 -0500
+
 vyatta-op (0.13.122) unstable; urgency=low
 
   * Bugfix: 7059 Make it such that show file prints a proper error when
