--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.133) unstable; urgency=low
+
+  * Fix clone so that it fails if a user attempts to clone to running://
+
+ -- John Southworth <john.southworth@vyatta.com>  Thu, 09 Jun 2011 17:58:54 -0500
+
 vyatta-op (0.13.132) unstable; urgency=low
 
   * Bugfix 5840: Change show interfaces so that ipv6 addresses and/or
