--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+vyatta-op (0.13.137) unstable; urgency=low
+
+  * Bugfix 7124: make 'show tech-support save' have a .txt at the end of
+    the file name. Make the script show the proper config path
+    '/config/support' instead of '/opt/vyatta/etc/config/support'
+
+ -- John Southworth <john.southworth@vyatta.com>  Thu, 16 Jun 2011 19:28:20 -0500
+
 vyatta-op (0.13.136) unstable; urgency=low
 
   * Display image type and hypervisor in show version
