--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.144) unstable; urgency=low
+
+  * Fix typo in error message in last commit
+
+ -- John Southworth <john.southworth@vyatta.com>  Tue, 28 Jun 2011 11:35:34 -0500
+
 vyatta-op (0.13.143) unstable; urgency=low
 
   * Add a disk-install uri for old disk based installs in image tools
