--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.148) unstable; urgency=low
+
+  * Bugfix 7278: Add a 'show log image <image-name> tail' command
+
+ -- John Southworth <john.southworth@vyatta.com>  Tue, 05 Jul 2011 11:01:53 -0500
+
 vyatta-op (0.13.147) unstable; urgency=low
 
   * Bugfix 7277: Make clone system config consistent with the other
