--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.152+napa1) unstable; urgency=low
+
+  * new branch
+
+ -- Deepti Kulkarni <deepti@vyatta.com>  Thu, 07 Jul 2011 20:49:56 -0700
+
 vyatta-op (0.13.152) unstable; urgency=low
 
   *  Bugfix 7285: remove coloring of error
