--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-op (0.13.152+napa2) unstable; urgency=low
+
+  * Bugfix 7266: make 'show history' work with non interactive shells
+    like webgui
+
+ -- John Southworth <john.southworth@vyatta.com>  Fri, 08 Jul 2011 17:12:18 -0500
+
 vyatta-op (0.13.152+napa1) unstable; urgency=low
 
   * new branch
