--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.155) unstable; urgency=low
+
+  * re-release of package due to bad git config
+
+ -- John Southworth <john.southworth@vyatta.com>  Mon, 11 Jul 2011 12:51:05 -0500
+
 vyatta-op (0.13.154) unstable; urgency=low
 
   * Bugfix 7304: Bring DHCPv6 client leases script back into the
