--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.152+napa4) unstable; urgency=low
+
+  * Fix history time format so that webgui and cli match
+
+ -- John Southworth <john.southworth@vyatta.com>  Mon, 11 Jul 2011 13:50:01 -0500
+
 vyatta-op (0.13.152+napa3) unstable; urgency=low
 
   [ John Southworth ]
