--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.157) unstable; urgency=low
+
+  * Fix history time format so that webgui and cli match
+
+ -- John Southworth <john.southworth@vyatta.com>  Mon, 11 Jul 2011 13:50:39 -0500
+
 vyatta-op (0.13.156) unstable; urgency=low
 
   * Bugfix 7266: make 'show history' work with non interactive shells
