--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-op (0.13.162) unstable; urgency=low
+
+  * Bugfix 5611: Set prompt for operator level users to be similar to
+    other vendors
+
+ -- John Southworth <john.southworth@vyatta.com>  Tue, 26 Jul 2011 20:15:07 -0700
+
 vyatta-op (0.13.161) unstable; urgency=low
 
   * Bugfix 7357: change the op mode command wrapper to setup the aliases
