--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.165) unstable; urgency=low
+
+  * Add top level verb "force".
+
+ -- Deepti Kulkarni <deepti@vyatta.com>  Wed, 27 Jul 2011 07:49:16 -0700
+
 vyatta-op (0.13.164) unstable; urgency=low
 
   * Bugfix 7380: fix pager exceptions regex.
