--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+vyatta-op (0.13.152+napa3) unstable; urgency=low
+
+  [ John Southworth ]
+  * Bugfix 7266: make 'show history' work with non interactive shells
+    like webgui
+  * 0.13.152+napa2
+
+  [ Bob Gilligan ]
+
+ -- Bob Gilligan <gilligan@vyatta.com>  Sun, 07 Aug 2011 15:24:53 -0700
+
 vyatta-op (0.13.152+napa2) unstable; urgency=low
 
   * Bugfix 7266: make 'show history' work with non interactive shells
