--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-op (0.13.154) unstable; urgency=low
+
+  * Bugfix 7304: Bring DHCPv6 client leases script back into the
+    release.
+
+ -- Bob Gilligan <gilligan@vyatta.com>  Sun, 07 Aug 2011 15:29:02 -0700
+
 vyatta-op (0.13.153) unstable; urgency=low
 
   * new branch
