--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.172) unstable; urgency=low
+
+  *  Ignore ip6tunl0 anchor interface
+
+ -- John Southworth <john.southworth@vyatta.com>  Tue, 09 Aug 2011 18:29:14 -0500
+
 vyatta-op (0.13.171) unstable; urgency=low
 
   * Add handler for top level unprivledged command expansion in node
