--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-op (0.13.187) unstable; urgency=low
+
+  * fix handleing of invalid commands when there is an the parent node
+    is runnable
+
+ -- John Southworth <john.southworth@vyatta.com>  Fri, 30 Sep 2011 14:21:04 -0500
+
 vyatta-op (0.13.186) unstable; urgency=low
 
   * If there are no completions then always show the non-completions,
