--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+vyatta-op (0.13.189) unstable; urgency=low
+
+  * Fix output of invalid and ambiguous error messages
+  * Always attempt to set the node path, this gives us a chance to fail
+    on invalid or ambiguous commands with out waiting for the user to
+    hit tab twice
+
+ -- John Southworth <john.southworth@vyatta.com>  Fri, 30 Sep 2011 17:58:34 -0500
+
 vyatta-op (0.13.188) unstable; urgency=low
 
   * Fix problem with recovering from invalid completion
