--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+vyatta-op (0.13.191) unstable; urgency=low
+
+  * Make completions not get stuck when backspacing over a character in
+    the last word, so the only compreply now contains the current word
+    but is not equal to the current word
+
+ -- John Southworth <john.southworth@vyatta.com>  Mon, 03 Oct 2011 11:16:39 -0500
+
 vyatta-op (0.13.190) unstable; urgency=low
 
   * Stop completions from getting stuck on nodes when backspacing to
