--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-op (0.13.193) unstable; urgency=low
+
+  * Alert users when they have entered a completion that doesn't match.
+  * Fix top level completions when there are already words on the line
+
+ -- John Southworth <john.southworth@vyatta.com>  Tue, 04 Oct 2011 11:14:51 -0500
+
 vyatta-op (0.13.192) unstable; urgency=low
 
   * Make completion properly handle non-last-word completions
