--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-op (0.13.199) unstable; urgency=low
+
+  * Make operational mode completion when the user enters an unknown
+    prefix on a tag node consistent with configuration mode
+
+ -- John Southworth <john.southworth@vyatta.com>  Thu, 06 Oct 2011 10:52:08 -0500
+
 vyatta-op (0.13.198) unstable; urgency=low
 
   * fix help text printing when the command is runnable
