--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+vyatta-op (0.13.200) unstable; urgency=low
+
+  * Bugfix 6747: use bash conditional expressions instead of posix test
+    expressions when doing comparisons. The conditional expressions
+    don't do as much expansion as the test expression does, and are the
+    modern variant
+
+ -- John Southworth <john.southworth@vyatta.com>  Thu, 06 Oct 2011 16:20:44 -0500
+
 vyatta-op (0.13.199) unstable; urgency=low
 
   * Make operational mode completion when the user enters an unknown
