--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+vyatta-op (0.13.213) unstable; urgency=low
+
+  * Fix perlcritic warning about bareword file handle
+  * cleanup rename-image
+
+ -- Stephen Hemminger <shemminger@vyatta.com>  Wed, 09 Nov 2011 08:19:04 -0800
+
 vyatta-op (0.13.212) unstable; urgency=low
 
   * Remove accidental commit of 'show system boot-messages commit'
