--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.214) unstable; urgency=low
+
+  * :Fixing bug 4086, added support for showing domain overrides
+
+ -- Gaurav Sinha <gaurav.sinha@vyatta.com>  Wed, 09 Nov 2011 16:38:31 -0800
+
 vyatta-op (0.13.213) unstable; urgency=low
 
   * Fix perlcritic warning about bareword file handle
