--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vyatta-op (0.13.218) unstable; urgency=low
+
+  * boot-image: fix perl critic warnings
+
+ -- Stephen Hemminger <shemminger@vyatta.com>  Tue, 29 Nov 2011 11:01:26 -0800
+
 vyatta-op (0.13.217) unstable; urgency=low
 
   * Fix case where node.tag was sent to script instead of the actual
